# Adaptive-Learned-Index

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate_figures.py  run_all.bat  run_all.ps1  run_all.sh  run_asan.bat
benchmark/: ablation_benchmark.cpp  asan_test.cpp  drift_benchmark.cpp  main_benchmark.cpp
include/: alex_index.hpp  btree_index.hpp  common.hpp  nli_index.hpp  pgm_index.hpp  rmi_index.hpp
results/: ablation_results.csv  benchmark_report.md  benchmark_results.csv  drift_results.csv  drift_stage_summary.csv
scripts/: generate_report.py  generate_tables.py  plot_results.py  validate_datasets.py
